--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.1.0
+  beamer: ^1.5.3
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
