--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.1.0
   beamer: ^1.5.3
+  http: ^0.13.6
+  floor: ^1.4.2
+  fluttertoast: ^8.2.2
+  sqflite: ^2.2.8+4
 
 dev_dependencies:
+  build_runner: ^2.1.2
+  floor_generator: ^1.4.2
   flutter_launcher_icons: "^0.13.1"
   flutter_test:
     sdk: flutter
