--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   floor: ^1.4.2
   fluttertoast: ^8.2.2
   sqflite: ^2.2.8+4
+  rx_shared_preferences: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.1.2
