--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,15 +41,13 @@ dependencies:
   floor: ^1.4.2
   fluttertoast: ^8.2.2
   sqflite: ^2.2.8+4
-  mobx: ^2.2.0
-  flutter_mobx: ^2.0.6+5
   http_interceptor: ^1.0.2
+  provider: ^6.0.5
 
 dev_dependencies:
   build_runner: ^2.1.2
   floor_generator: ^1.4.2
   flutter_launcher_icons: "^0.13.1"
-  mobx_codegen: ^2.3.0
   flutter_test:
     sdk: flutter
 
