--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+4
+version: 1.0.1+5
 
 environment:
   sdk: '>=2.19.6 <3.0.0'
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.0.5
   share_plus: ^7.0.2
   dropdown_button2: ^2.1.3
+  sentry_flutter: ^7.8.0
 
 dev_dependencies:
   build_runner: ^2.1.2
