--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   dropdown_button2: ^2.1.3
   sentry_flutter: ^7.8.0
   image_picker: ^1.0.2
+  firebase_core: ^2.16.0
+  firebase_messaging: ^14.6.8
+  flutter_local_notifications: ^15.1.1
 
 dev_dependencies:
   build_runner: ^2.1.2
